02-vehicles: generate code and update requirements with some clarifications
